Display banners configured in opus #486  - Add background colour to bg-items to prevent flashing of images during load (maybe)  - Remove theoretically unnecessary align-self: stretch

--- a/grails-app/assets/stylesheets/mergedProfilesThemeColour.scss
+++ b/grails-app/assets/stylesheets/mergedProfilesThemeColour.scss
@@ -2289,7 +2289,9 @@ textarea[ckeditor='richTextSingleLine'] + .cke .cke_wysiwyg_div {
       -ms-flex: 0 0 0;
       flex: 0 0 0;
       content: "";
-      align-self: stretch;
+      //-ms-flex-item-align: stretch;
+      //-ms-grid-row-align: stretch;
+      //align-self: stretch;
     }
 
     .banner-container {
@@ -2298,9 +2300,9 @@ textarea[ckeditor='richTextSingleLine'] + .cke .cke_wysiwyg_div {
       -webkit-box-flex: 1;
       -ms-flex: 1 0 auto;
       flex: 1 0 auto;
-      -ms-flex-item-align: stretch;
-      -ms-grid-row-align: stretch;
-      align-self: stretch;
+      //-ms-flex-item-align: stretch;
+      //-ms-grid-row-align: stretch;
+      //align-self: stretch;
 
 
       .bg-item {
